# great-reading

./: .env.docker  .env.docker.example  .gitignore  AI_DEVELOPMENT.md  DEPLOYMENT.md  INTEGRATION.md  Makefile  README.md  RENDER_DEPLOYMENT.md  TODO.md  docker-compose.yml  openapi.yaml  package.json  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  books.py  definitions.py  dictionary.py  settings.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  book.py  dictionary.py  settings.py  user.py
backend/app/schemas/: __init__.py  book.py  common.py  dictionary.py  settings.py  user.py
backend/app/services/: __init__.py  dictionary_service.py  pdf_service.py  sample_book.py
backend/tests/: __init__.py  conftest.py  test_books.py  test_definitions.py  test_dictionary.py  test_settings.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MainPage.tsx  PdfUploader.tsx  ReadingView.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useTimer.ts
src/: index.css
src/components/: DictionarySidebar.tsx  MinimalTimer.tsx  PdfUploader.tsx  ReadingApp.tsx  ReadingModeToggle.tsx  ReadingView.tsx  Timer.tsx  WordContextMenu.tsx
src/hooks/: useDictionary.ts  useTimer.ts
src/pages/: Index.tsx
src/types/: reading.ts
(+17 files in other folders)
