[project]
name = "greatreading"
version = "0.1.0"
description = "GreatReading - English language learning reading application backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.7",
]
